# window-dance-player

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  wdp.py
window_dance_player/: __init__.py  __main__.py  logger.py  main.py  player.py  ui.py
window_dance_player/audio/: __init__.py  analysis.py
window_dance_player/dance/: __init__.py  dancer.py  patterns.py  physics.py
window_dance_player/image/: __init__.py  overlay.py  warp.py
window_dance_player/platform/: __init__.py  detect.py  hyprland.py  kde.py  sway.py  window.py  x11.py
