[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "window-dance-player"
version = "1.0.0"
description = "A terminal music player that dances your window to the beat"
readme = "README.md"
license = { text = "GPL-3.0-or-later" }
authors = [{ name = "Ymsniper" }]
requires-python = ">=3.10"
keywords = ["music", "player", "window", "animation", "beat", "terminal"]
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Environment :: Console :: Curses",
    "Operating System :: POSIX :: Linux",
    "Topic :: Multimedia :: Sound/Audio :: Players",
]
dependencies = [
    "librosa>=0.10.0",
    "pygame>=2.5.0",
    "numpy>=1.24.0",
]

[project.scripts]
window-dance-player = "window_dance_player.main:main"

[project.urls]
Homepage    = "https://github.com/Ymsniper/window-dance-player"
"Bug Tracker" = "https://github.com/Ymsniper/window-dance-player/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["window_dance_player*"]
